k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncall-prober
  labels:
    app: oncall-prober
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oncall-prober
  template:
    metadata:
      labels:
        app: oncall-prober
    spec:
      containers:
        - name: oncall-prober
          image: oncall-prober:local
          ports:
            - containerPort: 9091
