k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oncall-prober-service
spec:
  selector:
    app: oncall-prober
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
