k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncall-prober-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: oncall.local.prober
      http:
        paths:
          - path: "/metrics"
            pathType: Exact
            backend:
              service:
                name: oncall-prober-service
                port:
                  number: 9091
